[package]
name = "s3tftpd-healthz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.44.0", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
ttftp = "0.2.0" # https://github.com/melvdlin/tftpc/blob/main/src/client.rs
