[package]
name = "healthz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.8.1", features = ["macros"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
